minimal horizontal slide

--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
         <script src="./dist/main.js"></script>
     </head>
     <body>
-        <div class="section-details">
-
-        </div>
-        <div class="sections-container">
-            <div class="section-cover">
-
-            </div>
-            <div class="empty-spacer">
+        <div class="cover">
+            <div class="content">
 
             </div>
         </div>
