--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
         <title>Newcomb</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="/dist/main.js"></script>
+        <script src="./dist/main.js"></script>
     </head>
     <body>
-        <div class="cover">
-            <div class="content">
+        <div class="cover-container">
+            <div class="conver-content">
 
+            </div>
+            <div class="chevron">
+                <div class="vertical-button">
+                    <div class="chevron-wrapper">
+                        <svg id="icon-chevron-right" height="100%" width="100%" viewBox="0 0 19 28">
+                            <title>chevron-right</title>
+                            <path d="M17.297 13.703l-11.594 11.594c-0.391 0.391-1.016 0.391-1.406 0l-2.594-2.594c-0.391-0.391-0.391-1.016 0-1.406l8.297-8.297-8.297-8.297c-0.391-0.391-0.391-1.016 0-1.406l2.594-2.594c0.391-0.391 1.016-0.391 1.406 0l11.594 11.594c0.391 0.391 0.391 1.016 0 1.406z"></path>
+                        </svg>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
