--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <title>Newcomb</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="./dist/main.js"></script>
     </head>
     <body>
         <div class="details-content">
@@ -156,5 +155,6 @@
                 </div>
             </div>
         </div>
+        <script async src="./dist/main.js"></script>
     </body>
 </html>
