cant find the bundle?

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                 </div>
             </div>
         </div>
-        <script async src="./dist/main.js"></script>
+        <script async src="./dist/main.js" type="javascript" onload="loadeded();" />
+        <script>function loadeded(){console.log('Loaded!ed..')}</script>
     </body>
 </html>
