--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Newcomb</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script async src="./dist/main.js" type="javascript" ></script>
+        <script src="dist/main.js" type="javascript"></script>
     </head>
     <body>
         <div class="details-content">
